added extensions to rm'd files

--- a/Assignment_1/makefile
+++ b/Assignment_1/makefile
@@ -1,7 +1,12 @@
 # makefile for distributed project 1
 
-all:
+all: rm
+	
+rm: rm.c
 	gcc rm.c -o rm
 
+dv: dv.c
+	gcc dv.c -o dv
+
 clean:
-	rm *o rm
+	rm rm dv
